kubernetes/apps/default/echo/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app echo
  namespace: &namespace default
  annotations:
    kustomize.toolkit.fluxcd.io/substitute: "true"
spec:
  hostnames: ["echo.${SECRET_DOMAIN}"]
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: *app
          namespace: *namespace
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
